[package]

name = "crdt"
version = "0.2.0"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"

description = "Conflict-free Replicated Data Types for Rust"
repository = "https://github.com/danburkert/crdt.git"
readme = "README.md"
keywords = ["library", "distributed", "crdt"]

[dependencies.quickcheck]
  git = "https://github.com/danburkert/quickcheck.git"

[dependencies.quickcheck_macros]
  git = "https://github.com/danburkert/quickcheck.git"
