[package]

name = "crdt"
version = "0.4.1"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"

description = "Conflict-free Replicated Data Types for Rust"
repository = "https://github.com/danburkert/crdt.git"
readme = "README.md"
keywords = ["library", "distributed", "crdt"]

[features]

default = []

# If enabled, implementations for the quickcheck generator
# traits are provided for the CRDTs.
quickcheck_generators = ["quickcheck"]

[dependencies.quickcheck]
  version = "*"
  optional = true

[dev-dependencies]
  quickcheck = "*"
  quickcheck_macros = "*"
